--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scrapper",
+  "name": "school-data-extractor",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
-    "exceljs": "^4.4.0",
+    "exceljs": "^4.3.0",
     "express": "^4.21.0"
   },
   "description": ""
